--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "app.js",
   "dependencies": {
     "async": "^1.5.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-stage-2": "^6.13.0",
+    "babel-register": "^6.14.0",
     "bcrypt": "^0.8.5",
     "body-parser": "^1.14.1",
     "bootstrap": "^3.3.5",
