--- a/package.json
+++ b/package.json
@@ -2,24 +2,28 @@
   "name": "soonfy_email",
   "version": "0.0.1",
   "description": "首页发送邮件，查看发送状态，上传客户列表，列表页展示客户列表，并且允许增删改，下载页下载客户列表",
+  "keywords": [
+    "article",
+    "email"
+  ],
+  "author": {
+    "name": "soonfy",
+    "email": "soonfy@163.com",
+    "github": "https://github.com/soonfy"
+  },
   "main": "app.js",
   "dependencies": {
     "async": "^1.5.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-2": "^6.13.0",
     "babel-register": "^6.14.0",
-    "bcrypt": "^0.8.5",
     "body-parser": "^1.14.1",
     "bootstrap": "^3.3.5",
     "cheerio": "^0.19.0",
-    "connect-mongo": "^0.8.2",
     "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
-    "express-session": "^1.12.1",
-    "iconv": "^2.1.11",
     "jade": "^1.11.0",
     "jquery": "^2.1.4",
-    "json2csv": "^3.0.1",
     "mime": "^1.3.4",
     "moment": "^2.10.6",
     "mongoose": "^4.2.5",
@@ -29,16 +33,5 @@
     "nodemailer": "^2.5.0",
     "path": "^0.12.7",
     "request": "^2.67.0"
-  },
-  "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-concurrent": "^2.0.4",
-    "grunt-contrib-nodemon": "^0.5.2",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-nodemon": "^0.4.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "license": "MIT"
+  }
 }
