--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "soonfy_email",
   "version": "0.0.1",
-  "description": "首页发送邮件，查看发送状态，上传客户列表，列表页展示客户列表，并且允许增删改，下载页下载客户列表",
+  "description": "首页添加杂志，上传邮件列表，杂志列表页展示杂志列表，查看杂志发送状态，并且允许增删改，邮件列表页展示邮件列表，并且允许增删改",
   "keywords": [
     "article",
     "email"
