--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "main": "app.js",
   "dependencies": {
     "async": "^1.5.0",
+    "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-2": "^6.13.0",
     "babel-register": "^6.14.0",
