--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cheerio": "^0.19.0",
     "cookie-parser": "^1.4.0",
     "express": "^4.13.3",
+    "file_operator_sf": "0.0.1",
     "iconv-lite": "^0.4.13",
     "jade": "^1.11.0",
     "jquery": "^2.1.4",
